# Bitset

./: CMakeLists.txt  README.md  bit_manipulator.cpp  bit_manipulator.h  bitset.cpp  bitset.h  main.cpp  tests.cpp
tests/: bitset_test.h  test_23bit_bitset.cpp  test_64bit_bitset.cpp  test_7bit_bitset.cpp
